[#11108] EventSubscription - subscribe to remote runtime

--- a/api-domain/src/main/resources/descriptors/invocation-api.yaml
+++ b/api-domain/src/main/resources/descriptors/invocation-api.yaml
@@ -514,6 +514,9 @@ components:
         ipAddress:
           type: string
           description: The ip address of the runtime.
+        baseUrl:
+          type: string
+          description: The base url of the runtime.
         serverPort:
           type: integer
           format: int32
