--- a/api-domain/src/main/resources/descriptors/collection-api.yaml
+++ b/api-domain/src/main/resources/descriptors/collection-api.yaml
@@ -92,3 +92,5 @@ components:
         scopeUri:
           type: string
           format: uri
+        collectionType:
+          enum: [LIST, MAP, REFERENCE]
