--- a/api-domain/src/main/resources/descriptors/mdm-api.yaml
+++ b/api-domain/src/main/resources/descriptors/mdm-api.yaml
@@ -64,12 +64,6 @@ components:
           description: |
             The type qualified name that is normally the name of the java class. It is used to identify the ObjectDefinition by name. By default the
             GenericValue object is used.
-        publishInList:
-          type: boolean
-          default: true
-          description: |
-            The published objects can be seen in this list that can be accessed by the CollectionApi.list(). The name of the list will be
-            the nameList.
         publishedListName:
           type: string
           description: |
@@ -79,6 +73,7 @@ components:
           description: |
             The path of the identifier property that is uniquely identifies the given instance of the object. Normally it contains one String
             element that is the name of the identifier property. But it can be inside a contained object so it can be DATA, CODE or similar.
+            If this property is set then a map is generated for the published list. 
           items:
             type: string
         publishedMapName:
