[#12958] smart component layout expandable label

--- a/api-domain/src/main/resources/descriptors/smart-component-layout-definition.yaml
+++ b/api-domain/src/main/resources/descriptors/smart-component-layout-definition.yaml
@@ -26,6 +26,8 @@ components:
           $ref: '#/components/schemas/ComponentType'
         expandable:
           type: boolean
+        expandableSectionLabel:
+          type: string
         direction:
           $ref: '#/components/schemas/LayoutDirection'
         parentComponent:
