--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -26,11 +26,13 @@ smartbit4all {
   		"ValueSet": "org.smartbit4all.api.view.bean.ValueSet",
   		"ComponentConstraint": "org.smartbit4all.api.view.bean.ComponentConstraint",
   		"UiActionConstraint": "org.smartbit4all.api.view.bean.UiActionConstraint",
+  		"FilterExpressionFieldList": "org.smartbit4all.api.filterexpression.bean.FilterExpressionFieldList",
   		"FilterExpressionOrderBy": "org.smartbit4all.api.filterexpression.bean.FilterExpressionOrderBy",
   		"FilterExpressionBuilderModel": "org.smartbit4all.api.filterexpression.bean.FilterExpressionBuilderModel",
   		"PropertyDefinitionData": "org.smartbit4all.api.object.bean.PropertyDefinitionData",
   		"SmartLayoutDefinition": "org.smartbit4all.api.formdefinition.bean.SmartLayoutDefinition",
   		"SmartWidgetDefinition": "org.smartbit4all.api.formdefinition.bean.SmartWidgetDefinition",
+  		"SmartFilterType": "org.smartbit4all.api.filterexpression.bean.SmartFilterType",
   		"InvocationRequest": "org.smartbit4all.api.invocation.bean.InvocationRequest",
   		"InvocationRequestDefinition": "org.smartbit4all.api.invocation.bean.InvocationRequestDefinition",
   		"BranchedObjectEntry": "org.smartbit4all.api.object.bean.BranchedObjectEntry",
