[#12741] add MATRIX and SORTABLE widget type for SmartWidgetDefinition

--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -113,6 +113,9 @@ components:
         direction:
           description: The direction inside a container.
           $ref: '#/components/schemas/SmartFormWidgetDirection'
+        matrix:
+          description: Matrix model used for matrix widget
+          $ref: '#/components/schemas/SmartMatrixModel'
     SmartFormWidgetDirection:
       type: string
       enum:
