[#12667] `ObjectExtensionApi` implementation and preliminary test
- dynamic object definition and redefinition
- heuristic layout generation

--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -602,7 +602,11 @@ components:
             type: string
             format: uri
         layoutDescriptor:
-          $ref: '#/components/schemas/ObjectLayoutDescriptor'
+          type: string
+          format: uri #ref-to: ObjectLayoutDescriptor
+        objectDefinition:
+          type: string
+          format: uri
     ObjectLayoutDescriptor:
       type: object
       description: |
